tests/fixtures/fail/throw_without_value.sc
let fail(): Result(i32, bool) = {
  throw
}

let main(): i32 = fail() ?? 42
